<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uda.android.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/info" />

        <Button
            android:id="@+id/popular_movies"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/background_dark"
            android:text="@string/POPULAR_MOVIES"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/stock_hawk"
            style="@style/MyButton"
            android:text="@string/STOCK_HAWK" />

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/MyButton"
            android:text="@string/BUILD_IT_BIGGER" />

        <Button
            android:id="@+id/make_your_app_material"
            style="@style/MyButton"
            android:text="@string/MAKE_YOUR_APP_MATERIAL" />

        <Button
            android:id="@+id/go_ubiquitous"
            style="@style/MyButton"
            android:text="@string/GO_UBIQUITOUS" />

        <Button
            android:id="@+id/capstone"
            style="@style/MyButton"
            android:text="@string/CAPSTONE" />
    </LinearLayout>
</ScrollView>
